--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-aws_access_key_id=AKIASNH256KKNSQDBW72
-aws_secret_access_key=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
+aws_access_key_id=AKABDNNANDSANFNFAABB
+aws_secret_access_key=Mdoaee=371H1Gy3ndO9%LAKSMDmnf00938kjaffs
